--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                       alt="Google Stories"
                       border="0"
                       width="552"
-                      style="width: 100%; max-width: 552px"
+                      style="width: 100%; max-width: 552px; border-radius: 20px;"
                     />
                   </td>
                 </tr>
